# remi-sdk

./: .gitmodules  Cargo.toml  README.md  THINGS_API_AND_MIGRATION.md  THINGS_CRDT_ARCHITECTURE.md  THINGS_SCHEMA_REFERENCE.md
.github/workflows/: rust-ci.yml
remi-client-sdk/: Cargo.toml  build.rs  metadata.json
remi-client-sdk/benches/: sdk_agent_tools.rs
remi-client-sdk/src/: action_builtin.rs  app_keys_client.rs  app_update.rs  archive.rs  auth.rs  chat_agent.rs  chat_client.rs  chat_runtime.rs  chat_types.rs  context_prompt.rs  crdt_cache.rs  crdt_sync.rs  data_lifecycle.rs  events_events.rs  external_tool_handler.rs  external_tool_schema.rs  external_tools.rs  interrupt_handler.rs  lib.rs  local_wasm.rs  location_service.rs  notification_events.rs  profile.rs  push_tokens.rs  quickjs.rs  realtime.rs  remi_uri.rs  runtime.rs  sentry_integration.rs  storage.rs  telemetry.rs  things_client.rs  things_crdt.rs  things_crdt_v2.rs  things_crdt_v2.rs.bak  things_events.rs  things_handlers.rs  things_sync.rs  transport.rs  trigger_client.rs  (+4 more)
remi-client-sdk/src/runtime/: path_tools.rs
remi-client-sdk/tests/: live_app_key_smoke.rs  things_v3_delete_semantics.rs  trigger_rule_published.rs  virtual_fs_tools.rs
remi-things-crdt/: Cargo.toml
remi-things-crdt/src/: compaction.rs  datatype.rs  extract.rs  lib.rs  markdown.rs  materialize.rs  ops.rs  schema.rs  util.rs  view.rs
remi-things-crdt/tests/: basic.rs  batch_upsert.rs  markdown_concurrent.rs  splice_block_not_found.rs  sync_scenarios.rs
rule-trigger-engine/: Cargo.toml
rule-trigger-engine/benches/: precondition_bench.rs
rule-trigger-engine/src/: lib.rs  realworld_tests.rs
